@@ -1,3 +1,10 @@
+Wed Apr 20 13:05:23 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
+
+	* DAnCE/Config_Handlers/Basic_Deployment_Data.cpp
+	* DAnCE/RepositoryManager/Update_Plan.cpp
+	
+	Fixed compile errors in Borland. 
+	
 Wed Apr 20 08:09:17 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
 	* DAnCE/ciao/Servant_Impl_T.cpp
 
